Fix - overflow:auto;

--- a/style.css
+++ b/style.css
@@ -18,7 +18,7 @@ ol,ul,li{
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    overflow: hidden;
+    overflow: auto;
 }
 
 .row{
@@ -104,6 +104,7 @@ ol,ul,li{
     color: white;
     font-size: calc(0.5vw + 5px);
     padding-top: 8px;
+    flex-wrap: nowrap;
 }
 
 col{
